# descriptor-mnemonic

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  MIGRATION.md  README.md  rust-toolchain.toml
crates/md-cli/: Cargo.toml  README.md
crates/md-cli/src/: compile.rs  error.rs  main.rs  output_advisory.rs
crates/md-cli/src/cmd/: address.rs  bytecode.rs  compile.rs  decode.rs  encode.rs  gen_man.rs  gui_schema.rs  inspect.rs  mod.rs  partial.rs  repair.rs  vectors.rs  verify.rs
crates/md-cli/src/format/: json.rs  text.rs
crates/md-cli/src/parse/: keys.rs  path.rs  template.rs
crates/md-cli/tests/: cli_encode_advisory.rs  cli_output_class.rs  cli_pathless_encode_advisory.rs  cli_repair.rs  cli_repair_dead_card_strict.rs  cmd_address.rs  cmd_address_json.rs  cmd_bytecode.rs  cmd_compile.rs  cmd_decode.rs  cmd_encode.rs  cmd_gen_man.rs  cmd_gui_schema.rs  cmd_inspect.rs  cmd_verify.rs  compile.rs  exit_codes.rs  h13_hardened_multipath_reject.rs  help_examples.rs  json_snapshots.rs  m5_multipath_not_last_reject.rs  partial_decode.rs  scaffold.rs  smoke.rs  template_roundtrip.rs  v017_v1_encode_acceptance.rs  vector_corpus.rs
crates/md-cli/tests/snapshots/: cmd_address_json__wpkh_mainnet_change_0.snap  cmd_address_json__wpkh_mainnet_receive_0_to_2.snap  cmd_address_json__wpkh_testnet_receive_0.snap  cmd_address_json__wsh_2of2_mainnet_receive_0.snap  json_snapshots__decode@nums_taproot.snap  json_snapshots__decode@pkh_basic.snap  json_snapshots__decode@sh_wpkh.snap  json_snapshots__decode@sh_wsh_multi.snap  json_snapshots__decode@single_string_boundary.snap  json_snapshots__decode@tr_keyonly.snap  json_snapshots__decode@tr_with_leaf.snap  json_snapshots__decode@wpkh_basic.snap  json_snapshots__decode@wsh_divergent_paths.snap  json_snapshots__decode@wsh_multi_2of2.snap  json_snapshots__decode@wsh_multi_2of3.snap  json_snapshots__decode@wsh_sortedmulti.snap  json_snapshots__decode@wsh_with_fingerprints.snap  json_snapshots__inspect@nums_taproot.snap  json_snapshots__inspect@pkh_basic.snap  json_snapshots__inspect@sh_wpkh.snap  json_snapshots__inspect@sh_wsh_multi.snap  json_snapshots__inspect@single_string_boundary.snap  json_snapshots__inspect@tr_keyonly.snap  json_snapshots__inspect@tr_with_leaf.snap  json_snapshots__inspect@wpkh_basic.snap  json_snapshots__inspect@wsh_divergent_paths.snap  json_snapshots__inspect@wsh_multi_2of2.snap  json_snapshots__inspect@wsh_multi_2of3.snap  json_snapshots__inspect@wsh_sortedmulti.snap  json_snapshots__inspect@wsh_with_fingerprints.snap
crates/md-codec/: Cargo.toml  README.md
crates/md-codec/src/: bch.rs  bch_decode.rs  bitstream.rs  canonical_origin.rs  canonicalize.rs  chunk.rs  chunking.rs  codex32.rs  decode.rs  decode_report.rs  derive.rs  encode.rs  encoding.rs  error.rs  header.rs  identity.rs  lib.rs  options.rs  origin_path.rs  policy.rs  policy_compiler.rs  policy_id.rs  render.rs  tag.rs  test_helpers.rs  test_vectors.rs  tlv.rs  to_miniscript.rs  tree.rs  use_site_path.rs  validate.rs  varint.rs  vectors.rs  wallet_id.rs
crates/md-codec/src/bytecode/: cursor.rs  decode.rs  encode.rs  hand_ast_coverage.rs  header.rs  key.rs  mod.rs  path.rs  tag.rs  varint.rs
crates/md-codec/src/encoding/: bch_decode.rs
crates/md-codec/src/v11/: bitstream.rs  chunk.rs  codex32.rs  decode.rs  encode.rs  error.rs  header.rs  identity.rs  mod.rs  origin_path.rs  phrase.rs  tag.rs  tlv.rs  tree.rs  use_site_path.rs  validate.rs  varint.rs
crates/md-codec/tests/: _smoke.rs  address_derivation.rs  bch_adversarial.rs  bch_correction.rs  bch_decode.rs  bip341_wallet_vectors.rs  bitcoind_differential.rs  chunking.rs  cli.rs  cmd_address.rs  cmd_address_json.rs  cmd_bytecode.rs  cmd_compile.rs  cmd_decode.rs  cmd_encode.rs  cmd_inspect.rs  cmd_verify.rs  compile.rs  conformance.rs  corpus.rs  display_grouping_conformance.rs  ecc.rs  error_coverage.rs  exit_codes.rs  fingerprints.rs  forward_compat.rs  help_examples.rs  json_snapshots.rs  mixed_case_reject.rs  parity_smoke.rs  proptest_roundtrip.rs  proptest_to_miniscript.rs  render_template_snapshot.rs  scaffold.rs  smoke.rs  taproot.rs  template_roundtrip.rs  upstream_shapes.rs  v0_5_cli.rs  v0_5_taptree_hostile.rs  (+8 more)
crates/md-codec/tests/common/: mod.rs
crates/md-codec/tests/snapshots/: cmd_address_json__wpkh_mainnet_receive_0_to_2.snap  cmd_address_json__wpkh_testnet_receive_0.snap  cmd_address_json__wsh_2of2_mainnet_receive_0.snap  json_snapshots__decode@pkh_basic.snap  json_snapshots__decode@tr_keyonly.snap  json_snapshots__decode@wpkh_basic.snap  json_snapshots__decode@wsh_sortedmulti.snap  json_snapshots__inspect@sh_wpkh.snap  json_snapshots__inspect@sh_wsh_multi.snap  (+2 more)
crates/md-signer-compat/: Cargo.toml
crates/md-signer-compat/src/: coldcard.rs  ledger.rs  lib.rs  tests.rs
crates/md-signer-compat/tests/: cli.rs
crates/wdm-codec/: Cargo.toml  README.md
crates/wdm-codec/src/: chunking.rs  decode.rs  decode_report.rs  encode.rs  encoding.rs  error.rs  lib.rs  options.rs  policy.rs  vectors.rs  wallet_id.rs
crates/wdm-codec/tests/: _smoke.rs  chunking.rs  cli.rs  conformance.rs  corpus.rs  ecc.rs  error_coverage.rs  fingerprints.rs  taproot.rs  vectors_schema.rs
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/corpus/md1_decode_payload/: pkh.payload  sh_wsh_multi_2of2.payload  tr_keyonly.payload  wpkh.payload  wsh_multi_2of2.payload  wsh_multi_2of3.payload  wsh_multi_wallet_policy_chunked.payload  wsh_sortedmulti_2of3.payload
fuzz/corpus/md1_decode_string/: pkh.md1  sh_wsh_multi_2of2.md1  tr_keyonly.md1  wpkh.md1  wsh_multi_2of2.md1  wsh_multi_2of3.md1  wsh_multi_wallet_policy_chunked.md1  wsh_sortedmulti_2of3.md1
fuzz/corpus/md1_decode_with_correction/: pkh.parts  wsh_multi_wallet_policy_chunked.parts
fuzz/corpus/md1_reassemble/: sh_wsh_multi_2of2.parts  tr_keyonly.parts  wpkh.parts  wsh_multi_2of2.parts  wsh_multi_2of3.parts  wsh_sortedmulti_2of3.parts
fuzz/dictionaries/: bech32.dict
fuzz/fuzz_targets/: md1_decode_payload.rs  md1_decode_string.rs  md1_decode_with_correction.rs  md1_reassemble.rs
fuzz/tests/: gen_corpus.rs
(+347 files in other folders)
