[workspace]
resolver = "3"
members = ["crates/md-codec", "crates/md-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "CC0-1.0"
repository = "https://github.com/bg002h/descriptor-mnemonic"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
miniscript = { version = "13.0.0", default-features = false, features = ["std"] }
