# md-codec fuzz workspace — md phase of the constellation stress-fuzz program
# (Cycle C). This is an OWN `[workspace]` so the repo root's
# `cargo test --workspace` / `cargo fmt --all` / `cargo clippy --workspace`
# completely ignore it (verified by R0). NO-BUMP: infra + tests only, zero
# changes to crates/md-codec/src/.
[package]
name = "md-codec-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.85"

[package.metadata]
cargo-fuzz = true

# Own workspace so the root workspace never sees this crate.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.md-codec]
path = "../crates/md-codec"

[profile.release]
debug = 1

# cargo-fuzz auto-discovers fuzz_targets/*.rs, but declaring each [[bin]]
# explicitly with test/doc off keeps `cargo build`/`cargo test` in this
# workspace from trying to build them as ordinary binaries.
[[bin]]
name = "md1_decode_string"
path = "fuzz_targets/md1_decode_string.rs"
test = false
doc = false
bench = false

[[bin]]
name = "md1_reassemble"
path = "fuzz_targets/md1_reassemble.rs"
test = false
doc = false
bench = false

[[bin]]
name = "md1_decode_with_correction"
path = "fuzz_targets/md1_decode_with_correction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "md1_decode_payload"
path = "fuzz_targets/md1_decode_payload.rs"
test = false
doc = false
bench = false
