[package]
name = "md-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the Mnemonic Descriptor (MD) engravable BIP 388 wallet policy backup format"
readme = "README.md"
homepage = "https://github.com/bg002h/descriptor-mnemonic"
documentation = "https://docs.rs/md-cli"
keywords = ["bitcoin", "bip388", "wallet", "descriptor", "bech32"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "md"
path = "src/main.rs"

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]
cli-compiler = ["miniscript/compiler"]

[dependencies]
md-codec = { path = "../md-codec", version = "0.16.0" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
bitcoin = { workspace = true }
bip39 = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
miniscript = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.40", features = ["json"] }
tempfile = "3.13"
