[package]
name = "md-codec"
version = "0.7.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference implementation of the Mnemonic Descriptor (MD) format for engravable BIP 388 wallet policy backups"
readme = "README.md"
homepage = "https://github.com/bg002h/descriptor-mnemonic"
documentation = "https://docs.rs/md-codec"
keywords = ["bitcoin", "bip388", "wallet", "descriptor", "bech32"]
categories = ["cryptography::cryptocurrencies", "encoding", "command-line-utilities"]

[lints]
workspace = true

[lib]
name = "md_codec"

[[bin]]
name = "md"
path = "src/bin/md/main.rs"
required-features = ["cli"]

[[bin]]
name = "gen_vectors"
path = "src/bin/gen_vectors.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# Library-only consumers can disable `cli` to avoid pulling clap.
cli = ["dep:clap", "dep:anyhow"]
# Concrete-Policy compiler wrapper (`policy_to_bytecode`). Pulls in
# rust-miniscript's `compiler` feature, which is heavyweight (ILP-style
# enumeration in the Tap branch); off by default.
compiler = ["miniscript/compiler"]
# CLI mode for `md encode --from-policy <expr> --context <tap|segwitv0>`.
cli-compiler = ["cli", "compiler"]
# Exposes the `test_helpers` module to downstream crates' test suites.
# Off by default; enable only in `[dev-dependencies]` of consumer crates.
test-helpers = []

[dependencies]
bitcoin = "0.32"
miniscript = { git = "https://github.com/apoelstra/rust-miniscript", rev = "f7f1689ba92a17b09b03ea12f7048c15d134583e" }
bech32 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
indexmap = "2.0"
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
bip39 = "2.2.2"

[dev-dependencies]
rand = "0.9"
# strum::EnumIter for tests/error_coverage.rs exhaustiveness CI gate
strum = { version = "0.26", features = ["derive"] }
hex = "0.4"
assert_cmd = "2"
predicates = "3"
