[package]
name = "md-codec"
version = "0.12.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference implementation of the Mnemonic Descriptor (MD) format for engravable BIP 388 wallet policy backups"
readme = "README.md"
homepage = "https://github.com/bg002h/descriptor-mnemonic"
documentation = "https://docs.rs/md-codec"
keywords = ["bitcoin", "bip388", "wallet", "descriptor", "bech32"]
categories = ["cryptography::cryptocurrencies", "encoding"]

[lints]
workspace = true

[lib]
name = "md_codec"

[dependencies]
bitcoin = "0.32"
thiserror = "2.0"
bip39 = "2.2.2"
