[package]
name = "md-signer-compat"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Named signer-subset validators for Mnemonic Descriptor (MD) wallet policies"

[lints]
workspace = true

[[bin]]
name = "md-signer-compat"
path = "src/bin/md-signer-compat.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# Enables the `md-signer-compat` binary (validate-against-signer CLI).
cli = ["dep:clap", "dep:anyhow", "dep:hex"]

[dependencies]
md-codec = { path = "../md-codec" }
miniscript = { git = "https://github.com/apoelstra/rust-miniscript", rev = "f7f1689ba92a17b09b03ea12f7048c15d134583e" }
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
bitcoin = "0.32"
md-codec = { path = "../md-codec", features = ["test-helpers"] }
assert_cmd = "2"
predicates = "3"
