[package]
name = "wdm-codec"
version = "0.1.0-dev"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference implementation of the Wallet Descriptor Mnemonic (WDM) format for engravable BIP 388 wallet policy backups"
readme = "README.md"

[lints]
workspace = true

[lib]
name = "wdm_codec"

[[bin]]
name = "wdm"
path = "src/bin/wdm.rs"
required-features = ["cli"]

[[bin]]
name = "gen_vectors"
path = "src/bin/gen_vectors.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# Library-only consumers can disable `cli` to avoid pulling clap.
cli = ["dep:clap"]

[dependencies]
bitcoin = "0.32"
miniscript = "12"
bech32 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
indexmap = "2.0"
clap = { version = "4.5", features = ["derive"], optional = true }
bip39 = "2.2.2"

[dev-dependencies]
rand = "0.8"
# strum::EnumIter for tests/error_coverage.rs exhaustiveness CI gate
strum = { version = "0.26", features = ["derive"] }
hex = "0.4"
